--- a/src/components/ItemListContainer/Item/item.css
+++ b/src/components/ItemListContainer/Item/item.css
@@ -2,12 +2,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 900px;
     margin: 2rem;
     padding: 1rem;
-    width: 18rem;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    border-radius: 10px;
 }
 
-.cardImg img {
-    width: 100%;
+.cardImg {
+    display: flex;
+}
+
+h3 {
+    font-size: 24px;
+}
+
+.strong {
+    font-weight: bold;
+    font-size: 20px;
 }
