--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -1,31 +1,23 @@
 .spinner {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    display: inline-block;
-    border-top: 4px solid black;
-    border-right: 4px solid transparent;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  border: 5px solid wheat;
+  border-bottom-color: black;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .spinner::after {
-    content: '';  
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border-bottom: 4px solid wheat;
-    border-left: 4px solid transparent;
+
+  100% {
+    transform: rotate(360deg);
   }
-  @keyframes rotation {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  } 
+}
