--- a/src/components/Thankyou/ty.css
+++ b/src/components/Thankyou/ty.css
@@ -4,10 +4,11 @@
 }
 
 .wrapper {
+    padding-top: 10rem;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: #eee
 }
@@ -30,7 +31,7 @@
     stroke-width: 2;
     stroke: #fff;
     stroke-miterlimit: 10;
-    margin: 10% auto;
+    margin: 3rem auto;
     box-shadow: inset 0px 0px 0px #7ac142;
     animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both
 }
